--- a/PrivateTest/testBle/Base.lproj/Main.storyboard
+++ b/PrivateTest/testBle/Base.lproj/Main.storyboard
@@ -42,6 +42,7 @@
                         <segue destination="BYZ-38-t0r" kind="show" identifier="BluetoothManager" id="OvB-aw-FZT"/>
                         <segue destination="4sT-bc-tk9" kind="show" identifier="Weather" id="Hli-yj-O9i"/>
                         <segue destination="K0E-5u-WoL" kind="show" identifier="FTServices" id="d1S-6P-PBY"/>
+                        <segue destination="Fpm-5G-H9g" kind="show" identifier="LSApplicationWorkspace" id="fjU-XR-ag0"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zzb-gA-RBb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -77,9 +78,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="054-MP-b3L">
-                                <rect key="frame" x="260" y="550" width="80" height="30"/>
+                                <rect key="frame" x="260" y="285" width="80" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="    蓝牙开关 ">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="bleClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KyC-9k-yhC"/>
@@ -88,7 +90,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="054-MP-b3L" secondAttribute="bottom" constant="20" symbolic="YES" id="4UP-Aj-etw"/>
+                            <constraint firstItem="054-MP-b3L" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="mmP-eP-h21"/>
                             <constraint firstItem="054-MP-b3L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="y8N-Pl-oTt"/>
                         </constraints>
                     </view>
@@ -158,6 +160,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zIg-0y-ztb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="585" y="815"/>
+        </scene>
+        <!--Application Workspace Table View Controller-->
+        <scene sceneID="Df2-sU-2yv">
+            <objects>
+                <tableViewController id="Fpm-5G-H9g" customClass="LSApplicationWorkspaceTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="28" sectionFooterHeight="28" id="Clj-5W-iyL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" textLabel="ieU-yh-0VX" detailTextLabel="oOh-4s-6aU" rowHeight="87" style="IBUITableViewCellStyleSubtitle" id="rkI-H1-f7h">
+                                <rect key="frame" x="0.0" y="92" width="600" height="87"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rkI-H1-f7h" id="oit-qW-JGF">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="86"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ieU-yh-0VX">
+                                            <rect key="frame" x="15" y="26" width="32" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oOh-4s-6aU">
+                                            <rect key="frame" x="15" y="46" width="31" height="14"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Fpm-5G-H9g" id="kJ1-Hl-k43"/>
+                            <outlet property="delegate" destination="Fpm-5G-H9g" id="1OW-EO-dhY"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Omp-yI-t2D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="433" y="1563"/>
         </scene>
     </scenes>
 </document>
